- Create swipe-delete action - Change some UI - Complete interraction with CoreData

--- a/Notepad/View/Base.lproj/Main.storyboard
+++ b/Notepad/View/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LdG-Bt-XeL">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -22,7 +23,8 @@
                     </tableView>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Notes" id="eWn-14-lRX">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="L9r-sv-vpm">
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="L9r-sv-vpm">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="addButtonPressed:" destination="K3d-bR-rbX" id="zhx-Tn-UPw"/>
                             </connections>
@@ -50,7 +52,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="393" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         </navigationBar>
-                        <textView key="tableFooterView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="NoteText" id="p4b-9q-m4c">
+                        <textView key="tableFooterView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="p4b-9q-m4c">
                             <rect key="frame" x="0.0" y="44" width="393" height="836"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -66,8 +68,9 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Title" id="cMk-nA-CS4">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="hBT-C8-nni">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
-                                <action selector="savePressed:" destination="aeN-nx-1av" id="XGe-st-7dO"/>
+                                <action selector="savePressed:" destination="aeN-nx-1av" id="ndv-NW-o9v"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -88,6 +91,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="RC0-6S-pKk">
                         <rect key="frame" x="0.0" y="59" width="393" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="K3d-bR-rbX" kind="relationship" relationship="rootViewController" id="orV-2d-zoI"/>
@@ -98,6 +104,7 @@
             <point key="canvasLocation" x="429" y="8"/>
         </scene>
     </scenes>
+    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
