--- a/Notepad/View/Base.lproj/Main.storyboard
+++ b/Notepad/View/Base.lproj/Main.storyboard
@@ -4,11 +4,13 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <array key="Montserrat-VariableFont_wght.ttf">
+            <string>MontserratRoman-Bold</string>
             <string>MontserratRoman-Regular</string>
         </array>
     </customFonts>
@@ -21,11 +23,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="7dh-F0-plB" userLabel="LineView">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="2"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" systemColor="labelColor"/>
-                        </view>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="5pO-gU-uv4">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <color key="barTintColor" name="BackColor"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="K3d-bR-rbX" id="W0N-Gk-Yav"/>
+                            </connections>
+                        </searchBar>
                         <connections>
                             <outlet property="dataSource" destination="K3d-bR-rbX" id="pdh-t4-8oo"/>
                             <outlet property="delegate" destination="K3d-bR-rbX" id="88Y-8V-qpA"/>
@@ -42,6 +48,7 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="searchBar" destination="5pO-gU-uv4" id="IzJ-id-zul"/>
                         <outlet property="tableView" destination="T0B-OI-PCc" id="c7Q-Lf-OnN"/>
                         <segue destination="aeN-nx-1av" kind="show" identifier="goToNotes" id="Zfo-TA-0pd"/>
                     </connections>
@@ -50,7 +57,7 @@
             </objects>
             <point key="canvasLocation" x="1337" y="8"/>
         </scene>
-        <!--Title-->
+        <!--Note View Controller-->
         <scene sceneID="Rk7-Kn-pDl">
             <objects>
                 <tableViewController id="aeN-nx-1av" customClass="NoteViewController" customModule="Notepad" customModuleProvider="target" sceneMemberID="viewController">
@@ -58,16 +65,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" id="kdk-R1-K4F">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                        </navigationBar>
+                        <textField key="tableHeaderView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Untilted" textAlignment="natural" minimumFontSize="17" id="ThF-Ox-D3v">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="34"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" name="MontserratRoman-Bold" family="Montserrat Thin" pointSize="24"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
                         <textView key="tableFooterView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="p4b-9q-m4c">
-                            <rect key="frame" x="0.0" y="44" width="414" height="836"/>
+                            <rect key="frame" x="0.0" y="34" width="414" height="836"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <inset key="scrollIndicatorInsets" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
                             <color key="textColor" systemColor="labelColor"/>
-                            <fontDescription key="fontDescription" name="MontserratRoman-Regular" family="Montserrat Thin" pointSize="17"/>
+                            <fontDescription key="fontDescription" name="MontserratRoman-Regular" family="Montserrat Thin" pointSize="12"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
                         <connections>
@@ -75,7 +85,7 @@
                             <outlet property="delegate" destination="aeN-nx-1av" id="JRn-mf-Jny"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Title" id="cMk-nA-CS4">
+                    <navigationItem key="navigationItem" id="cMk-nA-CS4">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="hBT-C8-nni">
                             <color key="tintColor" systemColor="labelColor"/>
                             <connections>
@@ -86,7 +96,7 @@
                     <connections>
                         <outlet property="noteTableView" destination="UUY-pT-8ae" id="ZQG-fz-e9V"/>
                         <outlet property="noteText" destination="p4b-9q-m4c" id="YVa-Vp-bLR"/>
-                        <outlet property="noteTitle" destination="cMk-nA-CS4" id="bcD-tM-bkJ"/>
+                        <outlet property="noteTitle" destination="ThF-Ox-D3v" id="smL-En-u9s"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yPd-aQ-whu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -115,6 +125,9 @@
     </scenes>
     <color key="tintColor" systemColor="labelColor"/>
     <resources>
+        <namedColor name="BackColor">
+            <color red="0.94499999284744263" green="0.9649999737739563" blue="0.97600001096725464" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
