--- a/Notepad/View/NoteCell.xib
+++ b/Notepad/View/NoteCell.xib
@@ -32,13 +32,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="00/00/0000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Os8-Sr-f9o">
-                                <rect key="frame" x="0.0" y="27.666666666666668" width="60.333333333333336" height="11.666666666666668"/>
-                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="10"/>
+                                <rect key="frame" x="0.0" y="27.666666666666661" width="48.333333333333336" height="9.3333333333333321"/>
+                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="8"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lrc-ZB-vad">
-                                <rect key="frame" x="0.0" y="47.333333333333329" width="33" height="196.66666666666669"/>
+                                <rect key="frame" x="0.0" y="45" width="33" height="199"/>
                                 <fontDescription key="fontDescription" name="MontserratRoman-Regular" family="Montserrat Thin" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
