- Add search methods - Change fonts and UI

--- a/Notepad/View/Base.lproj/Main.storyboard
+++ b/Notepad/View/Base.lproj/Main.storyboard
@@ -107,8 +107,8 @@
         <scene sceneID="vdT-XA-glh">
             <objects>
                 <navigationController id="LdG-Bt-XeL" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="RC0-6S-pKk">
-                        <rect key="frame" x="0.0" y="48" width="414" height="96"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="RC0-6S-pKk">
+                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
